# various-experiment

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
apps/: config.yaml  helper.py  main.py
dockerfiles/devcontainer/: Dockerfile  Makefile
habit-tracker/: package-lock.json
habit-tracker/app/: layout.tsx  page.tsx
habit-tracker/components/: AddHabitForm.tsx  HabitCard.tsx  HabitList.tsx
habit-tracker/hooks/: useHabits.ts
habit-tracker/types/: habit.ts
tests/: README.md  test_concurrency.py
