[project]
name = "various-experiment"
version = "0.1.0"
description = "Various technical experiments"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=1.26,<1.27",
    "pandas==1.5.3",
    "black[jupyter]==22.12.0",
    "ruff==0.0.230",
    "scipy>=1.14.0",
    "nbconvert==7.2.3",
    "matplotlib>=3.9.0",
    "jupyterlab>=4.2.0",
    "statsmodels>=0.14.2",
    "pyarrow>=17.0.0",
    "seaborn==0.12.1",
    "scikit-learn>=1.5,<1.6",
    "scipy>=1.15,<1.16",
    "statsmodels==0.14.4",
    "plotly==6.2.0",
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "openai>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.24,<1.0",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
select = ["I001"]
src = ["src", "scripts"]
